# src/swagger.yaml
@@ -95,3 +95,91 @@ paths:
                   error:
                     type: string
                     example: "Incorrect username/password combination."
+  /deliveryman:
+    post:
+      tags:
+        - Deliveryman
+      summary: Create a new deliveryman account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                username:
+                  type: string
+                  example: "username"
+                password:
+                  type: string
+                  example: "password"
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    format: "uuid"
+                  username:
+                    type: string
+                    example: "username"
+                  password:
+                    type: string
+                    example: "$2b$10$NsxUt5HKto4lsTSaENFTjeoLXC/bDOgnvSOw45yZCLxg/obni5x8y"
+        "400":
+          description: Username unavailable
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "This username is unavailable."
+  /deliveryman/login:
+    post:
+      tags:
+        - Deliveryman
+      summary: Authenticate a deliveryman
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              properties:
+                username:
+                  type: string
+                  example: "username"
+                password:
+                  type: string
+                  example: "password"
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    format: "uuid"
+                  username:
+                    type: string
+                    example: "username"
+                  token:
+                    type: string
+                    example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VybmFtZSI6InVzZXJuYW1lIiwiaWF0IjoxNjQ0MDE3NDE1LCJleHAiOjE2NDQxMDM4MTUsInN1YiI6IjU3YjczMjFiLTE5ODQtNDdlMi04NzQ3LTgzNGViZmZmY2M4MiJ9.rM6B9_Y4r-EB5CCQW9fefLFcW0RjB6SDERlT49U7vhE"
+        "400":
+          description: Authentication error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Incorrect username/password combination."
